{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 80,
  "lineage": "95496acf-4096-c3a9-aea5-02a909f9ed9c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042ee5db5aa51ca82",
            "arn": "arn:aws:ec2:ap-south-1:773802564338:elastic-ip/eipalloc-042ee5db5aa51ca82",
            "association_id": "eipassoc-08bc1abba9f31456f",
            "domain": "vpc",
            "id": "eipalloc-042ee5db5aa51ca82",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b062f6d7ed336d87",
            "private_dns": "ip-10-0-1-250.ap-south-1.compute.internal",
            "private_ip": "10.0.1.250",
            "public_dns": "ec2-65-2-135-233.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.135.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0388e3ada3d9812da",
            "arn": "arn:aws:ec2:ap-south-1:773802564338:instance/i-086c0b8e18eae424a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "arm-task-ec2-profile",
            "id": "i-086c0b8e18eae424a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "arm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc5b23b3b500d0fa",
            "private_dns": "ip-10-0-2-186.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:773802564338:key/7a6bacd6-d417-47cb-aad2-294d7f8c2957",
                "throughput": 125,
                "volume_id": "vol-05a811d0b8b51babb",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a46c2ece21651d",
            "tags": {
              "Name": "arm-task-app",
              "Project": "arm-task"
            },
            "tags_all": {
              "Name": "arm-task-app",
              "Project": "arm-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ba0160c0623ae60"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0388e3ada3d9812da",
            "arn": "arn:aws:ec2:ap-south-1:773802564338:instance/i-0360dcb4d1b805461",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0360dcb4d1b805461",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "arm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f89c539425d62b86",
            "private_dns": "ip-10-0-1-93.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-13-234-115-21.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.115.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f90e6b78a0653354",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bba1f124236edee1",
            "tags": {
              "Name": "arm-task-bastion",
              "Project": "arm-task"
            },
            "tags_all": {
              "Name": "arm-task-bastion",
              "Project": "arm-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0a53b0969960110"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0388e3ada3d9812da",
            "arn": "arn:aws:ec2:ap-south-1:773802564338:instance/i-0155b67642e886865",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "arm-task-ec2-profile",
            "id": "i-0155b67642e886865",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "arm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03aba74b1a4e9efa8",
            "private_dns": "ip-10-0-2-179.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:773802564338:key/7a6bacd6-d417-47cb-aad2-294d7f8c2957",
                "throughput": 125,
                "volume_id": "vol-068c210f7cefc82c9",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a46c2ece21651d",
            "tags": {
              "Environment": "staging",
              "Name": "arm-task-staging",
              "Project": "arm-task"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "arm-task-staging",
              "Project": "arm-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ba0160c0623ae60"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:internet-gateway/igw-054d3d23533376fbf",
            "id": "igw-054d3d23533376fbf",
            "owner_id": "773802564338",
            "tags": {
              "Name": "arm-task-igw"
            },
            "tags_all": {
              "Name": "arm-task-igw"
            },
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:loadbalancer/app/arm-task-alb/e8c89c8c2380fc53",
            "arn_suffix": "app/arm-task-alb/e8c89c8c2380fc53",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "arm-task-alb-512003968.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:loadbalancer/app/arm-task-alb/e8c89c8c2380fc53",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "arm-task-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c0678e7d70103226"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0851c779cb2b9aa51"
              },
              {
                "subnet_id": "subnet-0bba1f124236edee1"
              }
            ],
            "subnets": [
              "subnet-0851c779cb2b9aa51",
              "subnet-0bba1f124236edee1"
            ],
            "tags": {
              "Name": "arm-task-alb"
            },
            "tags_all": {
              "Name": "arm-task-alb"
            },
            "vpc_id": "vpc-0be062a0cfbddf5f9",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener/app/arm-task-alb/e8c89c8c2380fc53/9fe91da79acfb23c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-frontend-tg/077576921cdd7f66",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener/app/arm-task-alb/e8c89c8c2380fc53/9fe91da79acfb23c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:loadbalancer/app/arm-task-alb/e8c89c8c2380fc53",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863",
            "certificate_arn": "arn:aws:acm:ap-south-1:773802564338:certificate/251af80d-4585-49d7-aae1-c374b18e21de",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-frontend-tg/077576921cdd7f66",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:loadbalancer/app/arm-task-alb/e8c89c8c2380fc53",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-backend-tg/d6be193c7b87489e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/9fe91da79acfb23c/b94f27848b37bcd8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/9fe91da79acfb23c/b94f27848b37bcd8",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener/app/arm-task-alb/e8c89c8c2380fc53/9fe91da79acfb23c",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-backend-tg/d6be193c7b87489e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863/59bdb13a5bd249a9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863/59bdb13a5bd249a9",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/9fe91da79acfb23c/a84d80ec0027340f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/9fe91da79acfb23c/a84d80ec0027340f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener/app/arm-task-alb/e8c89c8c2380fc53/9fe91da79acfb23c",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "staging_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-backend-tg/e42b1e589fabb533",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863/738e11ce683dc0f8",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "staging-arm-task.devopslabx.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863/738e11ce683dc0f8",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863",
            "priority": 9,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.frontend",
            "aws_lb_target_group.staging_backend",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "staging_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-frontend-tg/d311311dce890e9c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863/b7239f2893194afc",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "staging-arm-task.devopslabx.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener-rule/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863/b7239f2893194afc",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:listener/app/arm-task-alb/e8c89c8c2380fc53/743620b1c3aab863",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.https",
            "aws_lb_target_group.frontend",
            "aws_lb_target_group.staging_frontend",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-backend-tg/d6be193c7b87489e",
            "arn_suffix": "targetgroup/arm-task-backend-tg/d6be193c7b87489e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-backend-tg/d6be193c7b87489e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:773802564338:loadbalancer/app/arm-task-alb/e8c89c8c2380fc53"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "arm-task-backend-tg",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "arm-task-backend-tg"
            },
            "tags_all": {
              "Name": "arm-task-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-frontend-tg/077576921cdd7f66",
            "arn_suffix": "targetgroup/arm-task-frontend-tg/077576921cdd7f66",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-frontend-tg/077576921cdd7f66",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:773802564338:loadbalancer/app/arm-task-alb/e8c89c8c2380fc53"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "arm-task-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "arm-task-frontend-tg"
            },
            "tags_all": {
              "Name": "arm-task-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "staging_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-backend-tg/e42b1e589fabb533",
            "arn_suffix": "targetgroup/arm-task-staging-backend-tg/e42b1e589fabb533",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-backend-tg/e42b1e589fabb533",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "arm-task-staging-backend-tg",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "arm-task-staging-backend-tg"
            },
            "tags_all": {
              "Name": "arm-task-staging-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "staging_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-frontend-tg/d311311dce890e9c",
            "arn_suffix": "targetgroup/arm-task-staging-frontend-tg/d311311dce890e9c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-frontend-tg/d311311dce890e9c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:773802564338:loadbalancer/app/arm-task-alb/e8c89c8c2380fc53"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "arm-task-staging-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "arm-task-staging-frontend-tg"
            },
            "tags_all": {
              "Name": "arm-task-staging-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-backend-tg/d6be193c7b87489e-20260427142859896600000002",
            "port": 4000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-backend-tg/d6be193c7b87489e",
            "target_id": "i-086c0b8e18eae424a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.app",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-frontend-tg/077576921cdd7f66-20260427142859868800000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-frontend-tg/077576921cdd7f66",
            "target_id": "i-086c0b8e18eae424a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.app",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "staging_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-backend-tg/e42b1e589fabb533-20260427144457137000000001",
            "port": 4000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-backend-tg/e42b1e589fabb533",
            "target_id": "i-0155b67642e886865"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.staging",
            "aws_lb_target_group.staging_backend",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "staging_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-frontend-tg/d311311dce890e9c-20260427144457151200000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773802564338:targetgroup/arm-task-staging-frontend-tg/d311311dce890e9c",
            "target_id": "i-0155b67642e886865"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.staging",
            "aws_lb_target_group.staging_frontend",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042ee5db5aa51ca82",
            "association_id": "eipassoc-08bc1abba9f31456f",
            "connectivity_type": "public",
            "id": "nat-0ca4f6a59250e0810",
            "network_interface_id": "eni-0b062f6d7ed336d87",
            "private_ip": "10.0.1.250",
            "public_ip": "65.2.135.233",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bba1f124236edee1",
            "tags": {
              "Name": "arm-task-nat"
            },
            "tags_all": {
              "Name": "arm-task-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:route-table/rtb-0bf6cf39764d1a8a6",
            "id": "rtb-0bf6cf39764d1a8a6",
            "owner_id": "773802564338",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ca4f6a59250e0810",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "arm-task-rt-private"
            },
            "tags_all": {
              "Name": "arm-task-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:route-table/rtb-0698104bca57b49ab",
            "id": "rtb-0698104bca57b49ab",
            "owner_id": "773802564338",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054d3d23533376fbf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "arm-task-rt-public"
            },
            "tags_all": {
              "Name": "arm-task-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdf42ad55773e660",
            "route_table_id": "rtb-0bf6cf39764d1a8a6",
            "subnet_id": "subnet-003a46c2ece21651d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef05dfffa395905d",
            "route_table_id": "rtb-0698104bca57b49ab",
            "subnet_id": "subnet-0bba1f124236edee1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec7f4a62bd5e6d2a",
            "route_table_id": "rtb-0698104bca57b49ab",
            "subnet_id": "subnet-0851c779cb2b9aa51"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:security-group/sg-0c0678e7d70103226",
            "description": "Allow HTTP/HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0678e7d70103226",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "arm-task-alb-sg",
            "name_prefix": "",
            "owner_id": "773802564338",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arm-task-alb-sg"
            },
            "tags_all": {
              "Name": "arm-task-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:security-group/sg-04ba0160c0623ae60",
            "description": "Allow traffic from ALB and restricted SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ba0160c0623ae60",
            "ingress": [
              {
                "cidr_blocks": [
                  "15.206.158.67/32"
                ],
                "description": "SSH from admin only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Backend API from ALB",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0678e7d70103226"
                ],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "Frontend from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0678e7d70103226"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "arm-task-app-sg",
            "name_prefix": "",
            "owner_id": "773802564338",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arm-task-app-sg"
            },
            "tags_all": {
              "Name": "arm-task-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:security-group/sg-0e0a53b0969960110",
            "description": "Bastion host SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0a53b0969960110",
            "ingress": [
              {
                "cidr_blocks": [
                  "15.206.158.67/32"
                ],
                "description": "SSH from admin only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "arm-task-bastion-sg",
            "name_prefix": "",
            "owner_id": "773802564338",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arm-task-bastion-sg"
            },
            "tags_all": {
              "Name": "arm-task-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:security-group/sg-0d726094cea0f6412",
            "description": "MongoDB only from app tier",
            "egress": [],
            "id": "sg-0d726094cea0f6412",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB from app only",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ba0160c0623ae60"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "arm-task-mongo-sg",
            "name_prefix": "",
            "owner_id": "773802564338",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arm-task-mongo-sg"
            },
            "tags_all": {
              "Name": "arm-task-mongo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from bastion only",
            "from_port": 22,
            "id": "sgrule-810187740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04ba0160c0623ae60",
            "security_group_rule_id": "sgr-03dab7df5bcdc965b",
            "self": false,
            "source_security_group_id": "sg-0e0a53b0969960110",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_security_group.bastion",
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:subnet/subnet-003a46c2ece21651d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003a46c2ece21651d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "773802564338",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arm-task-private-a"
            },
            "tags_all": {
              "Name": "arm-task-private-a"
            },
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:subnet/subnet-0bba1f124236edee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bba1f124236edee1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773802564338",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arm-task-public-a"
            },
            "tags_all": {
              "Name": "arm-task-public-a"
            },
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:subnet/subnet-0851c779cb2b9aa51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0851c779cb2b9aa51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "773802564338",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "arm-task-public-b"
            },
            "tags_all": {
              "Name": "arm-task-public-b"
            },
            "vpc_id": "vpc-0be062a0cfbddf5f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arm-task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arm-task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773802564338:vpc/vpc-0be062a0cfbddf5f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0014578dfe14d115e",
            "default_route_table_id": "rtb-044dbf19cde0d09ea",
            "default_security_group_id": "sg-0ec0c3f8821842d1e",
            "dhcp_options_id": "dopt-0fa9569c8abbfb45d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be062a0cfbddf5f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044dbf19cde0d09ea",
            "owner_id": "773802564338",
            "tags": {
              "Name": "arm-task-vpc"
            },
            "tags_all": {
              "Name": "arm-task-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}